--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <meta name="google" content="notranslate">
 <link rel="icon" href="favicon.png">
-<title>Fengz' Cloud</title>
+<title>我的KG</title>
 <script>
-window.config = {"title":"Fengz' Cloud","user":"YCF","repo":"ycf.github.com","token":"10636da3316a7ac0c12d80bccafccaede4b6ea1c","authors":"YCF","per_page":"15","sandbox":"false"}
+window.config = {"title":"我的KG","user":"2bro","repo":"2bro.github.com","token":"1f49aaba934d04c73b38be28237b677d71322159","authors":"2bro","per_page":"15","sandbox":"true"}
 </script>
-
 <style>html.loading{height:100%;text-align:center}html.loading body{height:100%}html.loading body:before{content:'';width:30px;height:30px;-webkit-border-radius:30px;border-radius:30px;-webkit-animation:loading 1.5s linear forwards infinite;animation:loading 1.5s linear forwards infinite;display:inline-block;border-top:4px solid #0089fa;border-right:4px solid #ff002b;border-bottom:4px solid #ffa900;border-left:4px solid #00a753;vertical-align:middle}html.loading body:after{content:'';display:inline-block;height:100%;vertical-align:middle}html.loading .container{display:none}@keyframes loading{100%{transform:rotate(360deg)}}@-webkit-keyframes loading{100%{-webkit-transform:rotate(360deg)}}</style>
 </head>
 
@@ -26,7 +25,7 @@ window.config = {"title":"Fengz' Cloud","user":"YCF","repo":"ycf.github.com","to
             </div>
 
             <div id="footer">
-                Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> & GitHub .
+                    © 2019 我的KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
                 <a id="source" target="_blank">Source</a>
                 <span id="sandbox"> | <a>SandBox</a></span>
             </div>
