window.config update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ window.config = {
     "repo":"2bro.github.com",
     "token":"1f49aaba934d04c73b38be28237b677d71322159",
     "authors":"2bro",
-    "ignores": '17,13',
+    "ignores": '',
     "per_page":"15",
     "sandbox":"true"
 }
