--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@ window.config = {
             </div>
 
             <div id="footer">
-                    © 2019 我的KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
+                © 2019 我的KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
                 <a id="source" target="_blank">Source</a>
                 <span id="sandbox"> | <a>SandBox</a></span>
+                <p>
+                本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次，本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+                </p>
             </div>
 
             <div class="sandbox">
@@ -61,6 +64,9 @@ window.config = {
 
     </div>
 
-<script type="text/javascript" src="/build.c4688d3ba5719cd2510e.js"></script></body>
+<script type="text/javascript" src="/build.c4688d3ba5719cd2510e.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    
+</body>
 
 </html>
