--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <meta name="google" content="notranslate">
 <link rel="icon" href="favicon.png">
-<title>我的KG</title>
+<title>&#x6211;&#x7684;KG</title>
 <script>
 window.config = {
-    "order": 'CREATED_AT',
-    "title":"我的KG",
+    "order": "CREATED_AT",
+    "title":"&#x6211;&#x7684;KG",
     "user":"2bro",
     "repo":"2bro.github.com",
     "token":"1f49aaba934d04c73b38be28237b677d71322159",
     "authors":"2bro",
-    "ignores": '',
+    "ignores": "",
     "per_page":"15",
     "sandbox":"true"
 }
@@ -35,11 +35,11 @@ window.config = {
             </div>
 
             <div id="footer">
-                © 2019 我的KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
+                © 2019 &#x6211;&#x7684;KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
                 <a id="source" target="_blank">Source</a>
                 <span id="sandbox"> | <a>SandBox</a></span>
                 <p>
-                本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次，本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+                &#x672C;&#x7AD9;&#x603B;&#x8BBF;&#x95EE;&#x91CF;<span id="busuanzi_value_site_pv"></span>&#x6B21;&#xFF0C;&#x672C;&#x7AD9;&#x8BBF;&#x5BA2;&#x6570;<span id="busuanzi_value_site_uv"></span>&#x4EBA;&#x6B21;&#xFF0C;&#x672C;&#x6587;&#x603B;&#x9605;&#x8BFB;&#x91CF;<span id="busuanzi_value_page_pv"></span>&#x6B21;
                 </p>
             </div>
 
