--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no">
 <meta name="google" content="notranslate">
 <link rel="icon" href="favicon.png">
-<title>&#x6211;&#x7684;KG</title>
+<title>KG</title>
 <script>
 window.config = {
     "order": "CREATED_AT",
-    "title":"&#x6211;&#x7684;KG",
+    "title":"KG",
     "user":"2bro",
     "repo":"2bro.github.com",
     "token":"1f49aaba934d04c73b38be28237b677d71322159",
@@ -35,12 +35,10 @@ window.config = {
             </div>
 
             <div id="footer">
-                © 2019 &#x6211;&#x7684;KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
+                © 2019 KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
                 <a id="source" target="_blank">Source</a>
                 <span id="sandbox"> | <a>SandBox</a></span>
-                <p>
-                &#x672C;&#x7AD9;&#x603B;&#x8BBF;&#x95EE;&#x91CF;<span id="busuanzi_value_site_pv"></span>&#x6B21;&#xFF0C;&#x672C;&#x7AD9;&#x8BBF;&#x5BA2;&#x6570;<span id="busuanzi_value_site_uv"></span>&#x4EBA;&#x6B21;&#xFF0C;&#x672C;&#x6587;&#x603B;&#x9605;&#x8BFB;&#x91CF;<span id="busuanzi_value_page_pv"></span>&#x6B21;
-                </p>
+
             </div>
 
             <div class="sandbox">
