--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 <title>KG</title>
 <script>
 window.config = {
-    "order": "CREATED_AT",
     "title":"KG",
     "user":"2bro",
     "repo":"2bro.github.com",
     "token":"1f49aaba934d04c73b38be28237b677d71322159",
     "authors":"2bro",
-    "ignores": "",
     "per_page":"15",
-    "sandbox":"true"
+    "sandbox":"false"
 }
 </script>
 <style>html.loading{height:100%;text-align:center}html.loading body{height:100%}html.loading body:before{content:'';width:30px;height:30px;-webkit-border-radius:30px;border-radius:30px;-webkit-animation:loading 1.5s linear forwards infinite;animation:loading 1.5s linear forwards infinite;display:inline-block;border-top:4px solid #0089fa;border-right:4px solid #ff002b;border-bottom:4px solid #ffa900;border-left:4px solid #00a753;vertical-align:middle}html.loading body:after{content:'';display:inline-block;height:100%;vertical-align:middle}html.loading .container{display:none}@keyframes loading{100%{transform:rotate(360deg)}}@-webkit-keyframes loading{100%{-webkit-transform:rotate(360deg)}}</style>
@@ -35,7 +33,7 @@ window.config = {
             </div>
 
             <div id="footer">
-                © 2019 KG. Powered by <a href="https://github.com/LoeiFy/Mirror" target="_blank">WO.KG</a> & GitHub .
+                © 2019 KG. Powered by <a href="https://github.com/2bro/2bro.github.io" target="_blank">WO.KG</a> & GitHub .
                 <a id="source" target="_blank">Source</a>
                 <span id="sandbox"> | <a>SandBox</a></span>
 
