--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ window.config = {
     "title":"KG",
     "user":"2bro",
     "repo":"2bro.github.io",
-    "token":"0af8e4cb9813343d38d952ad9e6b425e341b3626",
+    "token":"0#af8e4cb9813343d38d952ad9e6b425e341b3626",
     "authors":"2bro",
     "per_page":"15",
     "sandbox":"false"
