--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <title>KG</title>
 <script>
 window.config = {
-    "title":"KG",
-    "user":"2bro",
-    "repo":"2bro.github.io",
-    "token":"0#af8e4cb9813343d38d952ad9e6b425e341b3626",
-    "authors":"2bro",
-    "per_page":"15",
-    "sandbox":"false"
+  organization: false,
+  order: 'UPDATED_AT',
+  title: 'KG',
+  user: '2bro',
+  repository: '2bro.github.io',
+  authors: '2bro',
+  ignores: '',
+  hash: 'PafWeFcbEWACCFCdCWdEUXadEeObFXUeCFAbCOXOd28ua2c=',
+  perpage: 5,
 }
 </script>
 <style>html.loading{height:100%;text-align:center}html.loading body{height:100%}html.loading body:before{content:'';width:30px;height:30px;-webkit-border-radius:30px;border-radius:30px;-webkit-animation:loading 1.5s linear forwards infinite;animation:loading 1.5s linear forwards infinite;display:inline-block;border-top:4px solid #0089fa;border-right:4px solid #ff002b;border-bottom:4px solid #ffa900;border-left:4px solid #00a753;vertical-align:middle}html.loading body:after{content:'';display:inline-block;height:100%;vertical-align:middle}html.loading .container{display:none}@keyframes loading{100%{transform:rotate(360deg)}}@-webkit-keyframes loading{100%{-webkit-transform:rotate(360deg)}}</style>
