--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ window.config = {
   repository: '2bro.github.io',
   authors: '2bro',
   ignores: '',
-  taken: '0af8e4cb9813343d38d952ad9e6b425e341b3626',
+  taken: '0#af8e4cb9813343d38d952ad9e6b425e341b3626',
   perpage: 5,
 }
 </script>
